--- a/src/pages/care-plan/su-goals/dependencies.html
+++ b/src/pages/care-plan/su-goals/dependencies.html
@@ -20,3 +20,4 @@
 <link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-new-goal-modal/guuey-new-goal-modal.html" />
+<link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
