--- a/src/pages/care-plan/su-risk/dependencies.html
+++ b/src/pages/care-plan/su-risk/dependencies.html
@@ -18,3 +18,4 @@
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../elements/guuey-slider/guuey-slider.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+<link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
