added animation behaviors for three categories: default, admin, and care-plan. implemented these behaviors on each page. implemented neon-animated-pages on my-app.html.

--- a/src/pages/admin/ad-payment/ad-payment.html
+++ b/src/pages/admin/ad-payment/ad-payment.html
@@ -216,6 +216,9 @@
     observers:[
       "editQuery(query600)"
     ],
+    behaviors:[
+      Polymer.adminPagesAnimation
+    ],
     editQuery:function(query600){
       if(query600){
         this.customStyle["--app-grid-columns"]="1";
