--- a/src/pages/admin/ad-profile/dependencies.html
+++ b/src/pages/admin/ad-profile/dependencies.html
@@ -9,3 +9,5 @@
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
 <link rel="import" href="../../../elements/guuey-photo-editor/guuey-photo-editor.html" />
+
+<link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
