--- a/src/pages/care-plan/su-care-review/su-care-review.html
+++ b/src/pages/care-plan/su-care-review/su-care-review.html
@@ -397,6 +397,9 @@
         "queryEdit(query640)",
         "requirementsMet(agreeData)"
       ],
+      behaviors:[
+        Polymer.carePlanAnimation
+      ],
       _computeServiceUserAgree:function(suIndexData){
         var fullName=suIndexData.fName+" "+suIndexData.lName;
         this.agreeData.suName=fullName;
