--- a/src/pages/care-plan/su-medication/dependencies.html
+++ b/src/pages/care-plan/su-medication/dependencies.html
@@ -21,3 +21,5 @@
 <link rel="import" href="../../../elements/guuey-time-chunk-selector/guuey-time-chunk-selector.html" />
 <link rel="import" href="../../../elements/guuey-weekday-selector/guuey-weekday-selector.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+
+<link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
