--- a/src/pages/care-plan/su-pre/su-pre.html
+++ b/src/pages/care-plan/su-pre/su-pre.html
@@ -209,6 +209,9 @@
       observers:[
         "editQuery(query640)"
       ],
+      behaviors:[
+        Polymer.carePlanAnimation
+      ],
       createNewSection:function(){
         this.$.customInput.path=null;
         this.$.customInput.data={};
