--- a/src/pages/care-plan/su-risk/dependencies.html
+++ b/src/pages/care-plan/su-risk/dependencies.html
@@ -19,3 +19,5 @@
 <link rel="import" href="../../../elements/guuey-slider/guuey-slider.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
+
+<link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
