--- a/src/pages/care-plan/su-risk/su-risk.html
+++ b/src/pages/care-plan/su-risk/su-risk.html
@@ -408,7 +408,8 @@
         "requirementsMet(risksData)"
       ],
       behaviors:[
-        Polymer.fabAnimationBehavior
+        Polymer.fabAnimationBehavior,
+        Polymer.carePlanAnimation
       ],
       toggleEditModal:function(e){
         this.$.editModal.positionTarget = e.target;
