--- a/src/pages/default/def-login/def-login.html
+++ b/src/pages/default/def-login/def-login.html
@@ -299,6 +299,9 @@
       observers:[
         "queryEdit(query400)"
       ],
+      behaviors:[
+        Polymer.defPagesAnimation
+      ],
       validateInputs:function(){
         var validArray=[];
         var result=false;
