--- a/src/pages/default/def-verify/def-verify.html
+++ b/src/pages/default/def-verify/def-verify.html
@@ -159,6 +159,9 @@
                 value:false
               }
             },
+            behaviors:[
+              Polymer.defPagesAnimation
+            ],
             verifyEmail: function() {
               this.$.auth.user.sendEmailVerification()
                 .then(function() {
