--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -32,3 +32,5 @@
 <link rel="import" href="../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
 <link rel="import" href="elements/firebase-storage/firebase-storage.html" />
+
+<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html" />
