--- a/src/pages/admin/ad-dash/ad-dash.html
+++ b/src/pages/admin/ad-dash/ad-dash.html
@@ -36,8 +36,10 @@
       is: 'ad-dash',
       ready:function(){
         this.fire("pageLoaded", {page:this.page});
-      }
-
+      },
+      behaviors:[
+        Polymer.adminPagesAnimation
+      ]
     });
 
   </script>
