--- a/src/pages/admin/ad-payment/dependencies.html
+++ b/src/pages/admin/ad-payment/dependencies.html
@@ -8,3 +8,5 @@
 <link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+
+<link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
