--- a/src/pages/admin/ad-settings/ad-settings.html
+++ b/src/pages/admin/ad-settings/ad-settings.html
@@ -36,7 +36,10 @@
       is: 'ad-settings',
       ready:function(){
         this.fire("pageLoaded", {page:this.page});
-      }
+      },
+      behaviors:[
+        Polymer.adminPagesAnimation
+      ]
     });
 
   </script>
