--- a/src/pages/admin/ad-settings/dependencies.html
+++ b/src/pages/admin/ad-settings/dependencies.html
@@ -1,3 +1,5 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
+
+<link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
