--- a/src/pages/care-plan/su-care-review/dependencies.html
+++ b/src/pages/care-plan/su-care-review/dependencies.html
@@ -14,3 +14,5 @@
 <link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
 <link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
 <link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
+
+<link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
