--- a/src/pages/care-plan/su-care/su-care.html
+++ b/src/pages/care-plan/su-care/su-care.html
@@ -435,6 +435,9 @@
         "requirementsMet(agreeData)"
 
       ],
+      behaviors:[
+        Polymer.carePlanAnimation
+      ],
       updateUsers:function(snapshot){
         var tempList=[];
         if(snapshot.val()){
