--- a/src/pages/care-plan/su-create/dependencies.html
+++ b/src/pages/care-plan/su-create/dependencies.html
@@ -9,3 +9,5 @@
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+
+<link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
