--- a/src/pages/care-plan/su-goals/dependencies.html
+++ b/src/pages/care-plan/su-goals/dependencies.html
@@ -21,3 +21,5 @@
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-new-goal-modal/guuey-new-goal-modal.html" />
 <link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
+
+<link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
