--- a/src/pages/care-plan/su-medical/dependencies.html
+++ b/src/pages/care-plan/su-medical/dependencies.html
@@ -9,3 +9,5 @@
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+
+<link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
