--- a/src/pages/care-plan/su-medical/su-medical.html
+++ b/src/pages/care-plan/su-medical/su-medical.html
@@ -223,6 +223,9 @@
       observers:[
         "editQuery(query900)"
       ],
+      behaviors:[
+        Polymer.carePlanAnimation
+      ],
       fileChange:function(e) {
         var file = e.target.files[0];
         this.uploadedFile=file;
