--- a/src/pages/care-plan/su-medication/su-medication.html
+++ b/src/pages/care-plan/su-medication/su-medication.html
@@ -752,6 +752,9 @@
       observers:[
         "editQuery(query1000 , query640)"
       ],
+      behaviors:[
+        Polymer.carePlanAnimation
+      ],
       startNewMed:function(){
         this.$.medModal.toggle();
         this.hideSaveMed=false;
