--- a/src/pages/care-plan/su-profile/dependencies.html
+++ b/src/pages/care-plan/su-profile/dependencies.html
@@ -13,3 +13,5 @@
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
+
+<link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
