--- a/src/pages/default/def-error/def-error.html
+++ b/src/pages/default/def-error/def-error.html
@@ -35,6 +35,9 @@
       ready:function(){
         this.fire("pageLoaded",{page:this.page});
       },
+      behaviors:[
+        Polymer.defPagesAnimation
+      ]
     });
 
   </script>
