--- a/src/pages/default/def-error/dependencies.html
+++ b/src/pages/default/def-error/dependencies.html
@@ -1,2 +1,4 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
+
+<link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
