--- a/src/pages/default/def-home/dependencies.html
+++ b/src/pages/default/def-home/dependencies.html
@@ -10,3 +10,4 @@
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+<link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
