--- a/src/pages/default/def-login/dependencies.html
+++ b/src/pages/default/def-login/dependencies.html
@@ -6,3 +6,5 @@
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
 <link rel="import" href="../../../../bower_components/iron-collapse/iron-collapse.html" />
+
+<link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
